# waterbalance_challenge

./: AI_USAGE.md  NEXT_STEPS.md  pyproject.toml
src/: config.py  run_legacy.py  run_model.py  utils.py  water_model.py
tests/: test_legacy_bug.py  test_model.py  test_utils.py
